--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "boxicons": "^2.1.4",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
+    "react-360-view": "^0.1.3",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
