--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "boxicons": "^2.1.4",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.14.1",
     "react": "^18.2.0",
     "react-360-view": "^0.1.3",
