--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+        "browsersync": "browser-sync start --proxy 'http://localhost:3000' --files 'src/**/*.{js,jsx,css}'"
   },
   "eslintConfig": {
     "extends": [
