--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-        "browsersync": "browser-sync start --proxy 'http://localhost:3000' --files 'src/**/*.{js,jsx,css}'"
+    "browsersync": "browser-sync start --proxy 'http://localhost:3000' --files 'src/**/*.{js,jsx,css}'"
   },
   "eslintConfig": {
     "extends": [
@@ -33,6 +33,9 @@
       "react-app/jest"
     ]
   },
+  "jest": {
+
+},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "util": "^0.12.5"
   }
 }
